fix: change align item header

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -3,8 +3,6 @@
 }
 
 .flat {
-  width: 40px;
-  height: 40px;
   justify-content: center;
   align-items: center;
 }
